--- a/Randomization_simulation_methods/2.2-Bootstrap.qmd
+++ b/Randomization_simulation_methods/2.2-Bootstrap.qmd
@@ -1,6 +1,6 @@
 ---
-title: "The Bootstrap"
-subtitle: ""
+title: "Foundations of Sampling"
+subtitle: "The Bootstrap"
 author:
   - Elizabeth King
   - Kevin Middleton
@@ -12,7 +12,14 @@ format:
     logo: QMLS_Logo.png
     slide-number: true
     show-slide-number: all
+code-annotations: hover
 ---
+
+## Sampling from data sets: foundations
+
+- Jackknife
+- Bootstrap
+- Randomization
 
 ## What is the bootstrap?
 
@@ -60,6 +67,7 @@ dd <- tibble("phenotype" = rnorm(15),
 p1 <- dd |>
   ggplot(aes(phenotype, set, label = id)) + 
   geom_label(position = position_jitter(height = 0.3, seed = 34)) +
+  geom_point(x = mean(dd$phenotype), y = 1, size=3) +
   scale_y_continuous(NULL, breaks = NULL, limits = c(0.5, 3.5))
 
 p1
@@ -78,7 +86,9 @@ boot1$set <- 2 # <2>
 p2 <- p1 + # <3>
   geom_label(data = boot1, 
              position = position_jitter(height = 0.3, seed = 34),
-             color = "firebrick") 
+             color = "firebrick") +
+    geom_point(x = mean(boot1$phenotype), y = 2, size = 3, color = "firebrick") 
+
 
 p2
 ```
@@ -96,7 +106,8 @@ boot2$set <- 3
 p2 + 
   geom_label(data = boot2,
              position = position_jitter(height = 0.3, seed = 34),
-             color = "steelblue") 
+             color = "steelblue") +
+  geom_point(x = mean(boot2$phenotype), y = 3, size = 3, color = "steelblue") 
 
 ```
 
